Bug 629401: Carbon plugins that cannot load in X64 Mac should send an event or notifyObservers of failure. r=BenWa, a=blocks-betaN